# keyboard_mk2

./: .gitignore  README.md  keymap.yml  pyproject.toml  test_serial.py
leftboard/: Cargo.toml  attach.sh  build.rs  flash.sh  memory.x  rust-toolchain.toml
leftboard/.cargo/: config.toml
leftboard/src/: keyscan.rs  logger.rs  main.rs  serial.rs  usb.rs  usb_com.rs
rightboard/: Cargo.toml  attach.sh  bld_push.sh  flash.sh  memory.x
rightboard/.cargo/: config.toml
rightboard/src/: capslock.raw  display.rs  keyscan.rs  main.rs  numlock.raw  rotary.rs  serial.rs
scripts/: convert_to_raw.py  load_keymap.py  test_serial.py  test_tui.py  tui.tcss
task-profiler/: Cargo.toml
task-profiler/src/: lib.rs
util/: Cargo.toml
util/src/: cobs_uart.rs  debounce.rs  keymap.rs  lib.rs  logger.rs
