[package]
name = "rightboard"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.2.0", features = ["stm32l071cb", "unstable-pac", "time-driver-any", "exti", "memory-x"]  }
embassy-sync = { version = "0.6.2" }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = "0.4.0"

embedded-io = "0.6.1"
embedded-io-async = "0.6.1"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
heapless = { version = "0.8", default-features = false }
embedded-hal = "1.0.0"
static_cell = { version = "2" }
portable-atomic = { version = "1", features = ["unsafe-assume-single-core"] }
trait-variant = "0.1.2"
rotary-encoder-hal = { version = "0.6.0", features = ["table-decoder"] }
embassy-futures = "0.1.1"
ssd1306 = { version = "0.10.0", features = ["async"] }

[[bin]]
name = "rightboard"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = 2
lto = "fat"
# See: https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html
opt-level = 'z'  # Maybe switch to 's' for loop vectorization
