[package]
name = "util"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = "1.2.0"
defmt = "1.0.1"
embassy-futures = "0.1.2"
embassy-stm32 = { version = "0.4.0", features = ["defmt"] }
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
heapless = "0.9.1"
trait-variant = "0.1.2"
